--- a/helm/templates/pegacorn-fusionpbx-deployment.yaml
+++ b/helm/templates/pegacorn-fusionpbx-deployment.yaml
@@ -63,19 +63,18 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: {{ .Values.dockerRepo }}fusionpbx-docker:{{ .Values.imageTag }}            
+        image: {{ .Values.dockerRepo }}pegacorn-communicate-fusionpbx:{{ .Values.imageTag }}            
         imagePullPolicy: {{ .Values.imagePullPolicy | default "IfNotPresent" }}
         lifecycle:
           postStart:
             exec:
               command: ["/bin/bash","-c","echo 127.0.0.1 postgresql >> /etc/hosts; echo 127.0.0.1 fusionpbx >> /etc/hosts; echo 127.0.0.1 freeswitch >> /etc/hosts; echo 127.0.0.1 memcached >> /etc/hosts"]
-
         livenessProbe:
           httpGet:
             path: /
             port: 80
             scheme: HTTP
-          initialDelaySeconds: 60
+          initialDelaySeconds: 30
         name: fusionpbx
         ports:
         - containerPort: 80
@@ -92,5 +91,5 @@ spec:
             path: /
             port: 80
             scheme: HTTP
-          initialDelaySeconds: 60
+          initialDelaySeconds: 30
 
